<resources>
    <string name="app_name">Egyptian Mythology</string>
    <string name="app_version" translatable="false">v1.3.2</string>
    <string name="lang">en</string>
    <string name="quiz" translatable="false">Quiz</string>
    <string name="scores" translatable="false">Scores</string>
    <string name="ankh" translatable="false">ankh</string>
    <string name="times" translatable="false">x</string>
    <string name="three" translatable="false">3</string>
    <string name="doc" translatable="false">Documentation</string>
    <string name="cosmogonies" translatable="false">Cosmogonies</string>
    <string name="title_activity_gods_doc" translatable="false">GodsDocActivity</string>
    <string name="title_activity_cosmogonies_doc" translatable="false">CosmogoniesDocActivity</string>
    <string name="title_activity_myths_doc" translatable="false">MythsDocActivity</string>
    <string name="doc_title" translatable="false">Documentation</string>
    <string name="intro_title" translatable="false">Introduction</string>
    <string name="main" translatable="false">Menu</string>
    <string name="twenty" translatable="false">20</string>
    <string name="anubis" translatable="false">Anubis</string>
    <string name="bastet" translatable="false">Bastet</string>
    <string name="hathor" translatable="false">Hathor</string>
    <string name="horus" translatable="false">Horus</string>
    <string name="isis" translatable="false">Isis</string>
    <string name="min" translatable="false">Min</string>
    <string name="neith" translatable="false">Neith</string>
    <string name="nekhbet" translatable="false">Nekhbet</string>
    <string name="osiris" translatable="false">Osiris</string>
    <string name="ptah" translatable="false">Ptah</string>
    <string name="sekhmet" translatable="false">Sekhmet</string>
    <string name="selkis" translatable="false">Selkis</string>
    <string name="seth" translatable="false">Seth</string>
    <string name="sobek" translatable="false">Sobek</string>
    <string name="thot" translatable="false">Thot</string>
    <string name="credits" translatable="false">Credits</string>
    <string name="about_3" translatable="false">Images : Wikimedia Commons</string>
    <string name="off" translatable="false">Off</string>
    <string name="on" translatable="false">On</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="amemet">Amemet</string>
    <string name="amon_re">Amun-Re</string>
    <string name="best_score">Best Score :</string>
    <string name="cancel">Cancel</string>
    <string name="chou_tefnout"><![CDATA[Chu & Tefnut]]></string>
    <string name="confirm_title">Confirmation</string>
    <string name="congratulations">Congratulations !</string>
    <string name="english">English</string>
    <string name="exit_title">Exit</string>
    <string name="french">French</string>
    <string name="geb_nout"><![CDATA[Geb & Nut]]></string>
    <string name="gods">Gods</string>
    <string name="loading">Loading…</string>
    <string name="maat">Maat</string>
    <string name="main_menu">Main Menu</string>
    <string name="toShare">Share</string>
    <string name="yes">Yes</string>
    <string name="settings">Settings</string>
    <string name="myths">Myths</string>
    <string name="bes">Bes</string>
    <string name="bravo">Well done!</string>
    <string name="changeLang">Change the language</string>
    <string name="confirm_msg">Delete all your scores</string>
    <string name="delete">Clear</string>
    <string name="hapi">Hapi</string>
    <string name="khnoum">Khnum</string>
    <string name="khonsou">Khonsu</string>
    <string name="langLabel">Language</string>
    <string name="letsPlay">Let\'s\tplay!</string>
    <string name="main_gods">The main gods</string>
    <string name="mout">Mut</string>
    <string name="music">Music</string>
    <string name="no_score">No score !</string>
    <string name="cosmogonies_share">Throughout history, Men have sought to explain, to imagine the origin of the world, the moment when Creation takes place and gives birth to Men, animals, plants, all living things, water, land, etc., the ancient Egyptians are no exception… \n Learn more about Egyptian cosmogonies with this application: %1$s</string>
    <string name="exit_msg">Are you sure you want to leave the application?</string>
    <string name="gods_share">The deities were omnipresent in the daily life of the Egyptian people and they sought in these deities, support and protection against the forces of evil… Learn more about the Egyptian gods with this application: %1$s</string>
    <string name="heliopolis_title">Heliopolis Cosmogony</string>
    <string name="hermopolis_title">Hermopolis Cosmogony</string>
    <string name="memphis_title">Memphis Cosmogony</string>
    <string name="myth_circadien_title">Myth of the Day Cycle</string>
    <string name="myth_mort_title">The myth of death</string>
    <string name="myth_osiris_title">Osirian myth</string>
    <string name="myths_share">Myths are intended to explain the origins of a belief and they take an important place in ancient Egyptian civilization because ancient Egyptians sought to interpret all the phenomena they could observe through the prism of beliefs… \n Learn more about the main Egyptian myths with this application: %1$s</string>
    <string name="navigation_drawer_close">Close the navigation drawer</string>
    <string name="navigation_drawer_open">Open the navigation drawer</string>
    <string name="nephtys">Nephthys</string>
    <string name="ouadjet">Wadjet</string>
    <string name="progress">Progress</string>
    <string name="quiz_finish_txt">You have completed the quiz! You are an ace of Egyptian mythology.</string>
    <string name="re">Re</string>
    <string name="replay">Replay</string>
    <string name="score_record">Score record</string>
    <string name="scores_progress">Score progression</string>
    <string name="share_app_msg">Learn more about Egyptian mythology with this application! %1$s</string>
    <string name="share_app_title">Share the application</string>
    <string name="song">Sound</string>
    <string name="thebes_title">Thebes Cosmogony</string>
    <string name="toContact">Contact us</string>
    <string name="toueris">Tueris</string>
    <string name="instructions"><![CDATA[<br>* Answer the questions as fast as you can<br>* You have 20 seconds to answer each question<br>* You have 3 lives<br>* For 5 good answers in a row, you earn one life, but only if you have lost one<br>* The faster you answer, the more points you earn<br>]]></string>
    <string name="error_occured">An error has occurred!</string>
    <string name="q1">Who is the sovereign god and supreme judge of the Kingdom of the Dead</string>
    <string name="q34_r0">Chu and Tefnut</string>
    <string name="q34_r1">Geb and Nut</string>
    <string name="q34_r2">Osiris and Isis</string>
    <string name="q34_r3">Nephtys and Set</string>
    <string name="rate">Rate us</string>
    <string name="q10">What is the god of the earth</string>
    <string name="q100">What goddess fought Apophis in the Duat after Re\'s death</string>
    <string name="q101">Under the reign of which pharaoh the cult of Aten supplanted that of the other gods</string>
    <string name="q11">What is the goddess of heaven</string>
    <string name="q12">What is the name of Osiris\' wife</string>
    <string name="q13">What is the name of the wife of the god Seth</string>
    <string name="q14">How many gods have Geb and Nut given birth</string>
    <string name="q15">What is the name of the magician goddess and wife of Osiris</string>
    <string name="q16">What is the name of the sun god when he is the rising sun</string>
    <string name="q17">What is the name of the sun god when he is the midday sun</string>
    <string name="q18">What is the name of the sun god when he is the setting sun</string>
    <string name="q19">What is the god of evil, anger and uncontrolled passions</string>
    <string name="q2">Who is the god at the top of the great ennead of the nine main gods</string>
    <string name="q20">What is the goddess wife of Seth and protector of the dead</string>
    <string name="q21">What god is the result of the union of Osiris and Nephthys</string>
    <string name="q22">How many pieces is Osiris\' body cut up by his brother Seth</string>
    <string name="q23">What god is the result of the union of Osiris and Isis</string>
    <string name="q24">What is the god of craftsmen and architects</string>
    <string name="q25">Who is the god who personifies the protective magic</string>
    <string name="q26">Who is the god who personifies knowledge</string>
    <string name="q27">Who is the god who personifies the creative verb</string>
    <string name="q28">What is the god of paths</string>
    <string name="q29">How many hours does the sun god take to cross the river of heaven</string>
    <string name="q3">What is the name of the primordial ocean from which everything emerged?</string>
    <string name="q30">Which is the beneficial snake that protects the sun god at the sixth hour of the crossing of the heavenly river</string>
    <string name="q31">What goddess succeeds in obtaining the secret name of the god Ra</string>
    <string name="q32">What is the name of the protective goddess that the sun god carries on his forehead</string>
    <string name="q33">What is the name of the demiurge who emerged from the Nun to create everything</string>
    <string name="q34">Who are the first children of Tem</string>
    <string name="q35">What goddess swallows Ra in the evening to bring him into the world in the early morning</string>
    <string name="q36">What is the god of death and rebirth</string>
    <string name="q37">Which god replaces the sun god at night and is called the lunar god</string>
    <string name="q38">What is the cross called as a symbol of life?</string>
    <string name="q39">Which god was the very first to be mommified</string>
    <string name="q4">What is the dark snake that the sun god must face every night</string>
    <string name="q40">What is the animal representative of the goddess Hathor</string>
    <string name="q40_r0">The cow</string>
    <string name="q40_r1">The calf</string>
    <string name="q40_r2">The dog</string>
    <string name="q40_r3">The cat</string>
    <string name="q41">What is the animal representative of the goddess Bastet</string>
    <string name="q41_r0">The cat</string>
    <string name="q41_r1">The cow</string>
    <string name="q41_r2">The dog</string>
    <string name="q41_r3">The lion</string>
    <string name="q42">What is the representative animal of the goddess Sekhmet</string>
    <string name="q42_r0">The lioness</string>
    <string name="q42_r1">The dog</string>
    <string name="q42_r2">The cat</string>
    <string name="q42_r3">The tiger</string>
    <string name="q43">What is the most common cosmogony? </string>
    <string name="q44">What does the Djet correspond to in the individual?</string>
    <string name="q44_r0">The body</string>
    <string name="q44_r1">The soul</string>
    <string name="q44_r2">The spirit</string>
    <string name="q44_r3">The consciousness</string>
    <string name="q45">What does Ka correspond to in the individual?</string>
    <string name="q45_r0">The soul</string>
    <string name="q45_r1">The body</string>
    <string name="q45_r2">The spirit</string>
    <string name="q45_r3">The consciousness</string>
    <string name="q46">What ceremony allows the deceased\'s journey to the afterlife</string>
    <string name="q46_r0">Embalming</string>
    <string name="q46_r1">The funeral</string>
    <string name="q46_r2">Mummification</string>
    <string name="q46_r3">The bandage</string>
    <string name="amon">Amun</string>
    <string name="aton">Aten</string>
</resources>