<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_pyramid"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient_black"/>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ankh_launcher"
            android:contentDescription="@string/app_name"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            app:cardBackgroundColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:gravity="center"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/app_name"
                    android:textColor="@color/gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.neteru.ankh.classes.Typewriter
                    android:id="@+id/title"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@drawable/line_border_radius"/>

            <Button
                android:id="@+id/doc"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:drawableLeft="@mipmap/ic_import_contacts_white_24dp"
                android:drawableStart="@mipmap/ic_import_contacts_white_24dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:text="@string/doc"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@drawable/line_border_radius"/>

            <Button
                android:id="@+id/play"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:drawableLeft="@mipmap/ic_extension_white_24dp"
                android:drawableStart="@mipmap/ic_extension_white_24dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:text="@string/quiz"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@drawable/line_border_radius"/>

            <Button
                android:id="@+id/stats"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:drawableLeft="@mipmap/ic_assessment_white_24dp"
                android:drawableStart="@mipmap/ic_assessment_white_24dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:text="@string/scores"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@drawable/line_border_radius"/>

            <Button
                android:id="@+id/settings"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:drawableLeft="@mipmap/ic_build_white_24dp"
                android:drawableStart="@mipmap/ic_build_white_24dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:text="@string/settings"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@drawable/line_border_radius"/>

            <Button
                android:id="@+id/about"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:drawableLeft="@mipmap/ic_info_outline_white_24dp"
                android:drawableStart="@mipmap/ic_info_outline_white_24dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:text="@string/about"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/ankh"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:src="@drawable/ic_ankh"
            android:contentDescription="@string/ankh"/>

        <TextView
            android:text="@string/times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/goldenYellow"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:text="@string/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/goldenYellow"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>

</RelativeLayout>
